# Data-Structures-and-Algorithms-for-Susu

./: .gitattributes  .gitignore  CMakeLists.txt  build.bat  build.sh
lab1-1/: .main.cpp.swp  functions_menu.cpp  main.cpp  sum_first_last_neg.hpp  test.txt
lab1-2/: functions_menu.cpp  functions_menu.hpp  get_nums_from_string.hpp  main.cpp  test.txt
lab2-1/: library.cpp  library.hpp  main.cpp  test.txt
lab2-2/: functions_menu.cpp  main.cpp  stack_functions.cpp  stack_functions.hpp  test.txt
lab3-1/: count_digits.cpp  count_digits.hpp  functions_menu.cpp  functions_menu.hpp  main.cpp  test.txt
lab3-2/: main.cpp  queue.cpp  queue.hpp
lab4/: main.cpp  task2.txt  task3.txt  tasks.cpp  tasks.hpp
lab4/hash/: hash_table.cpp  hash_table.hpp  hashrot13.cpp  hashrot13.hpp
lab5/: main.cpp  result.txt  sort.hpp  test_sort.hpp
lab6/: main.cpp  tasks.cpp  tasks.hpp
tools/: console_menu.cpp  console_menu.hpp  gen_vector.hpp  other.cpp  other.hpp
